# owlscale

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
crates/owlscale-protocol/: Cargo.toml
crates/owlscale-protocol/src/: io.rs  lib.rs  main.rs  packet.rs  types.rs
crates/owlscale-protocol/tests/: protocol.rs
docs/: architecture.md
owlscale/: __init__.py  __main__.py  alias.py  cli.py  core.py  daemon.py  defaults.py  demo.py  detect.py  diff.py  export.py  fmt.py  git.py  history.py  identity.py  launch.py  lint.py  models.py  prune.py  route.py  serve.py  stats.py  template.py  validate.py  watch.py
owlscale-app/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
owlscale-app/src/: App.svelte  index.html  main.ts  mockData.ts  types.ts
owlscale-app/src-tauri/: Cargo.toml  tauri.conf.json
owlscale-app/src-tauri/capabilities/: default.json
owlscale-app/src-tauri/icons/: icon.icns
owlscale-app/src-tauri/src/: config.rs  git_ops.rs  lib.rs  main.rs  state_reader.rs  watcher.rs  workspace_registry.rs  worktrees.rs
owlscale-app/src/lib/: ActivityFocusView.svelte  AgentCard.svelte  AgentsFocusView.svelte  CreateTaskSheet.svelte  DetailPanel.svelte  ExecutionFocusView.svelte  FilterBar.svelte  FocusPanel.svelte  NoWorkspace.svelte  ReviewFocusView.svelte  SettingsPanel.svelte  SetupFocusView.svelte  StatusPanel.svelte  TaskCard.svelte  TaskForm.svelte  WorktreePanel.svelte  WorktreesFocusView.svelte  settingsStore.ts  styles.css
owlscale/adapters/: __init__.py  ghostty.py
tests/: test_alias.py  test_daemon.py  test_defaults.py  test_demo.py  test_detect.py  test_diff.py  test_git.py  test_history.py  test_identity.py  test_init_v2.py  test_launch.py  test_lint.py  test_owlscale.py  test_prune.py  test_roster_v2.py  test_serve.py  test_stats.py  test_template.py  test_validate.py
