[package]
name = "owlscale-app"
version = "0.1.0"
description = "owlscale desktop agent monitor"
authors = []
edition = "2021"

[[bin]]
name = "owlscale-app"
path = "src/main.rs"

[lib]
name = "owlscale_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
tokio = { version = "1", features = ["full"] }
owlscale-protocol = { path = "../../crates/owlscale-protocol" }

[dev-dependencies]
tempfile = "3"
